<resources>
    <string name="app_name">GymMethodMobile</string>
    <string name="txt_username_invalido">O username é inválido</string>
    <string name="txt_password_invalida">A password está incorreta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_pesquisa">Pesquisar</string>
    <string name="ndOpen">Open</string>
    <string name="ndClose">Close</string>


    <string name="default_email">Username nao identificado</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="act_titulo">Detalhes:%1$s</string>
    <string name="menu_perfil">Perfil</string>
    <string name="txt_menu_planos">Planos de Treino</string>
    <string name="txt_menu_aulas">Calendario de Aulas</string>
    <string name="txt_menu_aulas_marcadas">Aulas Marcadas</string>
    <string name="txt_exercicio_nome">nome</string>
    <string name="txt_exercicio">Exercicio:</string>
    <string name="txt_equipamento">Equipamento:</string>
    <string name="txt_equipamento_nome">equipamento</string>
    <string name="txt_tipo">Tipo:</string>
    <string name="txt_tipo_nome">tipo</string>
    <string name="txt_descricao">Descrição:</string>
    <string name="txt_descricao_content">null</string>
    <string name="txt_equipamento_exercicio">Equipamento:</string>
    <string name="txt_null">null</string>
    <string name="txt_series">Séries:</string>
    <string name="txt_repeticoes">Repetições:</string>
    <string name="txt_peso">Peso:</string>
    <string name="txt_tempo">Tempo:</string>
    <string name="txt_tempo_pessoal">Tempo pessoal:</string>
    <string name="txt_peso_pessoal">Peso pessoal:</string>
    <string name="txt_repeticoes_pessoais">Repetições pessoais:</string>
    <string name="txt_series_pessoais">Séries pessoais:</string>
    <string name="txt_nome">Nome:</string>
    <string name="txt_nome_plano">Nome</string>
    <string name="txt_treinador">Treinador:</string>
    <string name="txt_treinador_nome">Treinador</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_consultas">Consultas</string>
    <string name="txt_agua">Água</string>
    <string name="txt_menu_home">Menu Principal</string>
    <string name="txt_detalhes_perfil">Consulta o teu perfil</string>
    <string name="txt_detalhes_planos">Consulta os teus planos de treino</string>
    <string name="txt_detalhes_aulas">Consulta as aulas disponíveis</string>
    <string name="txt_detalhes_consultas">As tuas consultas</string>
    <string name="txt_detalhes_agua">Bebe água</string>
    <string name="txt_perfil_telemovel">Telémovel</string>
    <string name="txt_perfil_NIF">NIF</string>
    <string name="txt_perfil_peso">Peso</string>
    <string name="txt_perfil_altura">Altura</string>
    <string name="txt_perfil_morada">Morada</string>
    <string name="txt_perfil_cod_postal">Código de Postal</string>
    <string name="txt_edit_proprio">Nome Próprio</string>
    <string name="txt_edit_apelido">Apelido</string>
    <string name="txt_edit_telemovel">Telemóvel</string>
    <string name="txt_edit_nif">NIF</string>
    <string name="txt_edit_peso">Peso</string>
    <string name="txt_edit_altura">Altura</string>
    <string name="txt_edit_cidade">Cidade</string>
    <string name="txt_morada">Morada</string>
    <string name="txt_edit_pais">País</string>
    <string name="txt_menu_agua">Água</string>
    <string name="txt_menu_calorias">Calorias</string>
    <string name="txt_menu_consultas">Marcações</string>
    <string name="txt_menu_historico_consultas">Historico</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="txt_data">Data:</string>
    <string name="txt_hora">Hora</string>
    <string name="txt_status">Status:</string>
    <string name="txt_dom">DOM</string>
    <string name="txt_seg">SEG</string>
    <string name="txt_ter">TER</string>
    <string name="txt_qua">QUA</string>
    <string name="txt_qui">QUI</string>
    <string name="txt_sex">SEX</string>
    <string name="txt_sab">SAB</string>
    <string name="txt_valor">Valor</string>
</resources>