<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior ="single">
        <item
            android:id="@+id/perfil"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/planos"
            android:title="@string/txt_menu_planos"
            android:icon="@drawable/ic_menu_planos"
            />
        <item android:title="Aulas" >
            <menu>
                <item
                    android:id="@+id/aulas"
                    android:title="@string/txt_menu_aulas"
                    android:icon="@drawable/ic_menu_aulas"
                    />
                <item
                    android:id="@+id/aulasmarcadas"
                    android:title="@string/txt_menu_aulas_marcadas"
                    android:icon="@drawable/ic_menu_aulas_marcadas"
                    />

            </menu>
        </item>

        <item
            android:id="@+id/contadordeagua"
            android:title="Água"
            android:icon="@drawable/ic_action_grid"
            />
    </group>
</menu>