<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black_800"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:layout_weight="0.7"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_exercicio"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNome"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:text="@string/txt_exercicio_nome"
                android:textSize="16dp"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_equipamento"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEquipamento"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:textSize="16dp"
                android:text="@string/txt_equipamento_nome"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_tipo"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTipo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:textSize="16dp"
                android:text="@string/txt_tipo_nome"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>