<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    android:background="#232121">




    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:layout_margin="14dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">




        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_descricao"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvDescricao"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:text="@string/txt_null"
                android:textColor="@color/white"
                android:textSize="16dp" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_valor"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvValor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:text="@string/txt_null"
                android:textColor="@color/white"
                android:textSize="16dp" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_data"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvData"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:text="@string/txt_null"
                android:textColor="@color/white"
                android:textSize="16dp" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_hora"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvHora"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:text="@string/txt_null"
                android:textColor="@color/white"
                android:textSize="16dp" />




        </LinearLayout>

    </LinearLayout>
</LinearLayout>