<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_800"
    tools:context=".vistas.InscricaoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvInscricaoTitulo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="Aula"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:text="@string/txt_data"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvData"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/txt_null"
                    android:textColor="@color/white"
                    android:textSize="20dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:text="@string/txt_hora"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvHoraInicio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/txt_null"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvSeparacao"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="-"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvHoraFim"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/txt_null"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/txt_status"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/txt_null"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnInscrever"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="20dp"
                    android:onClick="onClickInscrever"
                    android:text="Inscrever"
                    app:backgroundTint="@color/red_700" />

                <Button
                    android:id="@+id/btnRemoverInscricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/red_700"
                    android:onClick="onClickRemoverInscricao"
                    android:text="Remover inscricao" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>